<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_texto">

    <fragment
        android:id="@+id/nav_texto"
        android:name="mx.itesm.practica_redes_erick.ui.descarga.DescargaTextoFrag"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_descarga_texto" />

    <fragment
        android:id="@+id/nav_imagen"
        android:name="mx.itesm.practica_redes_erick.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mx.itesm.practica_redes_erick.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="mx.itesm.practica_redes_erick.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_libros"
        android:name="mx.itesm.practica_redes_erick.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="mx.itesm.practica_redes_erick.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>